added something in project.clj to be able to use java9